噢多麼單純的一首詩 怎麼會 怎麼會 忘記加空白
-草東沒有派對《爛泥》

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
     <head>
         <meta charset="UTF-8" />
@@ -357,7 +357,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -385,7 +385,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('https://emtech.cc/ironman2023_2709523197975058030.webp'),
+                                        background-image: url(&quot;https://emtech.cc/ironman2023_2709523197975058030.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #000,
@@ -413,7 +413,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -441,7 +441,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -469,7 +469,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -497,7 +497,7 @@
                                 <div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -801,7 +801,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -831,7 +831,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -861,7 +861,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -891,7 +891,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -921,7 +921,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -951,7 +951,7 @@
                                         <div
                                             class="hero"
                                             style="
-                                                background-image: url('/static/img/thumbnail.webp'),
+                                                background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                                     linear-gradient(
                                                         135deg,
                                                         #fd7ce1,
@@ -1069,7 +1069,7 @@
                                 ><div
                                     class="hero"
                                     style="
-                                        background-image: url('/static/img/thumbnail.webp'),
+                                        background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                             linear-gradient(
                                                 135deg,
                                                 #fd7ce1,
@@ -1097,7 +1097,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1123,7 +1123,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1149,7 +1149,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1175,7 +1175,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1201,7 +1201,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1227,7 +1227,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1253,7 +1253,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1279,7 +1279,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1305,7 +1305,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
@@ -1331,7 +1331,7 @@
                             <div
                                 class="hero"
                                 style="
-                                    background-image: url('/static/img/thumbnail.webp'),
+                                    background-image: url(&quot;/static/img/thumbnail.webp&quot;),
                                         linear-gradient(
                                             135deg,
                                             #fd7ce1,
